{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 127,
  "lineage": "04439eb1-3f01-8136-baa5-d1f51c40bb6e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:internet-gateway/igw-0fa435cf2a0a76a6a",
            "id": "igw-0fa435cf2a0a76a6a",
            "owner_id": "573275805523",
            "tags": {
              "Name": "dev-ap-southeast-1-igw"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-igw"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "r_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fa435cf2a0a76a6a",
            "id": "r-rtb-003ce3150884ac9bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003ce3150884ac9bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:route-table/rtb-00dd18df5c95452d2",
            "id": "rtb-00dd18df5c95452d2",
            "owner_id": "573275805523",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtpriv"
            },
            "tags_all": {
              "Name": "rtpriv"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:route-table/rtb-003ce3150884ac9bb",
            "id": "rtb-003ce3150884ac9bb",
            "owner_id": "573275805523",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtpub"
            },
            "tags_all": {
              "Name": "rtpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpub_to_pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aecebd64daf9c847",
            "route_table_id": "rtb-003ce3150884ac9bb",
            "subnet_id": "subnet-091e27933136625d4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7fa1fb95d0a90a",
            "route_table_id": "rtb-003ce3150884ac9bb",
            "subnet_id": "subnet-07c9e9ec72bed1a30"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007747afd741355ae",
            "route_table_id": "rtb-003ce3150884ac9bb",
            "subnet_id": "subnet-0419ff079d0f9513e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtpub",
            "module.vpc.aws_subnet.pub",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:security-group/sg-001a68b894bc87a45",
            "description": "trusted network",
            "egress": [],
            "id": "sg-001a68b894bc87a45",
            "ingress": [],
            "name": "dev-ap-southeast-1-trustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ap-southeast-1-trustedsg"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-trustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "untrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:security-group/sg-06539dd7f20148500",
            "description": "Untrusted network",
            "egress": [],
            "id": "sg-06539dd7f20148500",
            "ingress": [],
            "name": "dev-ap-southeast-1-untrustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ap-southeast-1-untrustedsg"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-untrustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsTrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-2399194121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001a68b894bc87a45",
            "security_group_rule_id": "sgr-045d188b288822581",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.trusted",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsUntrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-4285186257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06539dd7f20148500",
            "security_group_rule_id": "sgr-0ae54e305a9167524",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.untrusted",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-08a09be0fc70ee5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.100.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a09be0fc70ee5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-1"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-1"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-060fa4ebbd954441b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.100.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060fa4ebbd954441b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-2"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-2"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-0d1af8242b1c60195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.100.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1af8242b1c60195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-3"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-3"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-091e27933136625d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e27933136625d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-1"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-1"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-07c9e9ec72bed1a30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9e9ec72bed1a30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-2"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-2"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-0419ff079d0f9513e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.100.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0419ff079d0f9513e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-3"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-3"
            },
            "vpc_id": "vpc-07c7a5e0864606dc9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:vpc/vpc-07c7a5e0864606dc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-042595c1fdf3af5dc",
            "default_route_table_id": "rtb-00a6b9c04566e2f75",
            "default_security_group_id": "sg-0c5eb2f392a078582",
            "dhcp_options_id": "dopt-02afaa1ac508340c1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c7a5e0864606dc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a6b9c04566e2f75",
            "owner_id": "573275805523",
            "tags": {
              "Name": "dev-ap-southeast-1-vpc"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-vpc"
            }
          }
        }
      ]
    }
  ]
}